23.0.2/README.md
# IBM Cloud Pak for Business Automation (CP4BA) 23.0.2 / watsonX Orchestrate Labs

To be able to perform labs listed below, you need to have IBM Cloud Pak for Business Automation 23.0.2 (either Starter or Starter deployment) installed and have imported the Client Onboarding scenario as described [here](https://github.com/IBM/cp4ba-client-onboarding-scenario/blob/main/23.0.2). For performing the watsonx Orchestrate lab, a watsonx Orchestrate instance is required as an additional  prerequisite.

The table below lists all capabilities for which currently labs are offered. A capability may contain one or more labs.

| Capability                                                   | Track | Approximate Duration | Survey |
| :----------------------------------------------------------- | :------------------: | :-----: | :-----: |
| [IBM Cloud Pak for Business Automation](IBM%20Cloud%20Pak%20for%20Business%20Automation%20(End-to-End)) (End-to-End Demo) |       1       |       2 hours        | [E2E Survey](https://www.surveymonkey.com/r/ba-dl-tech-jam-e2e) |
| [IBM Business Automation Application](Business%20Automation%20Application) |      2      |      2 hours       | [BAA Survey](https://www.surveymonkey.com/r/ba-dl-tech-jam-baa) |
| [IBM Business Automation Insights](Business%20Automation%20Insights) |        2        |        1 hour        | [BAI Survey](https://www.surveymonkey.com/r/ba-dl-tech-jam-bai) |
| [IBM FileNet Content Services](Content/Readme.md)        |      2      |      4-5 hours       | [FNCM Survey](https://www.surveymonkey.com/r/ba-dl-tech-jam-fncm) |
| [IBM Automation Decision Services](Decisions) |       2       |       3 hours        | [ADS Survey](https://www.surveymonkey.com/r/ba-dl-tech-jam-ads) |
| [IBM Process Mining](Process%20Mining) |      2      |      1-2 hours per lab      | [PM Survey](https://www.surveymonkey.com/r/ba-dl-tech-jam-pm) |
| [IBM Robotic Process Automation](Robotic%20Process%20Automation) |      2      |      3-4 hours       | [RPA Survey](https://www.surveymonkey.com/r/ba-dl-tech-jam-rpa) |
| [IBM Business Automation Workflow](Workflow) |      2      |      5-6 hours       | [BAW Survey](https://www.surveymonkey.com/r/ba-dl-tech-jam-baw) |
| [IBM Automation Document Processing](Document%20Processing) |      2      |      3-4 hours       | [ADP Survey](https://www.surveymonkey.com/r/ba-dl-tech-jam-adp) |
| [IBM watsonx Orchestrate](https://github.com/IBM/cp4ba-labs/tree/main/23.0.2/watsonx%20Orchestrate) | 2            | 2-3 hours             | [wxO Survey](https://www.surveymonkey.com/r/ba-dl-tech-jam-wxo) |
| [IBM CP4BA - Bring-up Lab](https://github.com/IBM/cp4ba-labs/tree/main/23.0.2/Bring-up/Readme.md) | 3 | 6-14 hours | [Bring-up Survey](https://www.surveymonkey.com/r/ba-dl-tech-jam-bring-up) |

## Track descriptions

The different tracks cater for different target groups and previous levels of exposure to Cloud Pack for Business Automation/watsonX Orchestrate.

**Track 1 – Foundation**

- **Audience**: New to Cloud Pak for Business Automation (CP4BA)
- **Learning**: Overview of the Cloud Pak from an end-user perspective
- **Approach**: Perform the Client Onboarding scenario

**Track 2 – Developer Role / Solution Implementation**

- **Audience**: Base understanding of Cloud Pak for Business Automation (CP4BA) /watsonX Orchestrate

- **Learning**: Overview of the Cloud Pak/watsonX Orchestrate from developer and partly user perspective

  ​		   Ability to develop pieces of the solution areas

- **Approach**: Detailed lab instructions to build respective solution aspects

**Track 3 – Administrator Role**

- **Audience**: Base understanding of Cloud Pak for Business Automation (CP4BA)

- **Learning**: Overview of the Cloud Pak from administrator/DevOps engineer perspective

  ​	           Ability to install and configure components of CP4BA

- **Approach**: Detailed lab instructions to install and configure CP4BA
